--- a/scss/blocks/_variable.scss
+++ b/scss/blocks/_variable.scss
@@ -1,2 +1,8 @@
+$didnight_green: #014E56;
+$light_coral: #F67E7E;
 $white:#FFFFFF;
-$black:#000000;
+$rapture_blue: #79C8C7;
+$police_blue: #2C6269;
+$deep_jungle_green: #004047;
+$sacramento_state_green: #012F34;
+$dark_green: #002529;
