--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,6 +1,6 @@
 ::selection {
-    background-color: $black;
-    color: $white;
+    background-color: $light_coral;
+    color: $dark_green;
 }
 
 *,
@@ -59,7 +59,7 @@ body {
     min-width: 320px;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Livvic';
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
@@ -68,7 +68,7 @@ body {
     padding: 0;
     line-height: 1.5;
     background-color: $white;
-    color: $black;
+    color: $white   ;
     overflow-x: hidden;
 }
 
