--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -67,7 +67,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.5;
-    background-color: $white;
+    background-color: $didnight_green;
     color: $white   ;
     overflow-x: hidden;
 }
