--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,7 +2,9 @@
 @import'mixin';
 @import'variable';
 @import'links';
+@import'link2';
 @import'header';
 @import'hero';
 @import'build';
 @import'delivery';
+@import'ready';
