--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -59,6 +59,14 @@
 
 @media(max-width:820px) {
     .header {
+        z-index: 1001;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        backdrop-filter: blur(5px);
+        transition: .6s ease;
+
         &__container {
             @include df-row-between;
             padding: 0 39px;
