--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -77,7 +77,88 @@
 @media(max-width:1290px) {
     .hero {
         background-color: $didnight_green;
-        padding: 100px 0 256px;
+        padding: 80px 0 256px;
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: '';
+            display: none;
+            width: 100px;
+            height: 200px;
+            top: 85px;
+            left: 0;
+            background-image: url('../images/shape__second.svg');
+            background-repeat: no-repeat;
+        }
+
+        &::before {
+            position: absolute;
+            content: '';
+            display: inline-block;
+            width: 358px;
+            height: 100px;
+            bottom: 0;
+            right: 165px;
+            background-image: url('../images/double__shapes.svg');
+            background-repeat: no-repeat;
+        }
+
+        &__container {
+            @include df-column-center;
+            gap: 24px;
+        }
+
+        &__title {
+            text-align: center;
+            width: 356px;
+            font-family: 'Livvic';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 64px;
+            line-height: 56px;
+            color: $white
+        }
+
+        span {
+            font-family: 'Livvic';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 64px;
+            line-height: 56px;
+            color: $light_coral
+        }
+
+        &__text {
+            text-align: center;
+            position: relative;
+            width: 457px;
+            font-family: 'Livvic';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 28px;
+            color: $white;
+
+            &::after {
+                position: absolute;
+                content: '';
+                display: none;
+                width: 50px;
+                height: 4px;
+                top: -79px;
+                left: 0px;
+                background-image: url('../images/rectangle.svg');
+                background-repeat: no-repeat;
+            }
+        }
+    }
+}
+
+@media(max-width:820px) {
+    .hero {
+        background-color: $didnight_green;
+        padding: 200px 0 256px;
         position: relative;
 
         &::after {
